welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: '(' expected but identifier found.
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {for x in [a,b,c,d] {if ((12<x)&&(x<20)) {c=c+1} }; return c}  
                                                    ^countTeen:2: error: illegal start of simple expression
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {for x in [a,b,c,d] {if ((12<x)&&(x<20)) {c=c+1} }; return c}  
                                                                                                 ^